--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
