--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^18.7.1",
-    "@react-native-firebase/auth": "^18.7.1",
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/auth": "^18.7.3",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@viro-community/react-viro": "^2.23.0",
@@ -22,6 +22,7 @@
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
